--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>收集物小遊戲</title>
+<title>TurkeyBurger</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <!-- Start Page -->
 <div id="startPage">
-  <h1>收集物小遊戲</h1>
+  <h1>鐮刀王愛吃水果</h1>
+  <h2>橘子、西瓜、荔枝、蘋果</h2>
   <button id="startBtn">開始遊戲</button>
+  <p id="copyright">Copyright © 2025 SocialGroup. All rights reserved.</p>
 </div>
 
 <!-- 放在 gameArea 或 score 上方皆可 -->
 <button id="muteBtn">🔊</button>
 
-<div id="score">分數: 0 | 時間: 60s</div>
 <div id="gameArea">
+  <div id="score">分數: 0 | 時間: 60s</div>
   <div id="player"></div>
   <div id="item"></div>
   <div id="enemy"></div>
