--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <!-- Start Page -->
 <div id="startPage">
   <h1>鐮刀王愛吃水果</h1>
-  <h2>橘子、西瓜、荔枝、蘋果</h2>
+  <p>規則1：吃水果加分</p>
+  <p>規則2：拿鐮刀砍人</p>
+  <p>規則3：被抓就結束</p>
   <button id="startBtn">開始遊戲</button>
   <p id="copyright">Copyright © 2025 SocialGroup. All rights reserved.</p>
 </div>
@@ -32,9 +34,9 @@
 
   <!-- Game Over 視窗 -->
   <div id="gameOverScreen" class="hidden">
-    <div id="gameOverText">Game Over</div>
+    <div id="gameOverText">哎呀，不能再吃了</div>
     <div id="finalScore">分數: 0</div>
-    <button id="restartBtn">返回開始頁</button>
+    <button id="restartBtn">重新再吃</button>
   </div>
 </div>
 
