--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </div>
 
 <!-- 放在 gameArea 或 score 上方皆可 -->
-<!-- <button id="muteBtn">🔊</button> -->
+<button id="muteBtn">🔊</button>
 
 <div id="gameArea">
   <div id="score">分數: 0 | 時間: 60s</div>
